# citree_python

./: .gitignore  Cargo.toml  README.md  build_rs_cov.profraw  citree.py  coverage.lcov  default_1442025543743938778_0_83777.profraw  default_1442025543743938778_0_85140.profraw  default_1442025543743938778_0_88075.profraw  default_3560324830191412450_0_83777.profraw  default_3560324830191412450_0_85140.profraw  default_3560324830191412450_0_88075.profraw  default_3769273146111550026_0_83785.profraw  default_3769273146111550026_0_85143.profraw  default_4156429352152883747_0_83777.profraw  default_4156429352152883747_0_85140.profraw  default_4156429352152883747_0_88075.profraw  pyproject.toml  requirements.txt
python/: pyvenv.cfg
src/: lib.rs  multinomial.rs  normal.rs  poisson.rs  pynodes.rs  tests_rust.rs
tests/: test_citree.py
tests/media/: datos.csv
tests/media/scripts/: citree.r  ejemplo.R  kcitree.r  klda.r  plot.lrshclust.r
