[package]
name = "citree_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "citree_rust"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]


# Error de linkamiento en Mac Os 
[build]
rustflags = [
  "-C", "link-args=-Wl,-rpath,/Library/Developer/CommandLineTools/Library/Frameworks",
]

#[target.x86_64-apple-darwin]
#rustflags = [
#  "-C", "link-arg=-undefined",
#  "-C", "link-arg=dynamic_lookup",
#]

[dependencies]
anyhow = "1.0.71"
cargo-tarpaulin = "0.25.2"
ndarray = "0.15.6"
ndarray-linalg = {version = "0.16.0", features=["openblas"]}
numpy = "0.18.0"
pyo3 = "0.18.2"

[dev-dependencies]
pretty_assertions = "1.3.0"

